--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -49,6 +49,7 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 * Words in `UPPER_CASE` are the parameters to be supplied by the user e.g. in `add n/NAME`, `NAME` is a parameter which can be used as `add n/John Doe`.
 * Items in square brackets are optional e.g `n/NAME [t/TAG]` can be used as `n/John Doe t/friend` or as `n/John Doe`.
 * Items with `…`​ after them can be used multiple times including zero times e.g. `[t/TAG]...` can be used as `{nbsp}` (i.e. 0 times), `t/friend`, `t/friend t/family` etc.
+* Items with `?`​ after them can be used optionally including zero times e.g. `[m/MAJOR]?` can be used as `{nbsp}` (i.e. optional), `m/Computer Science`, `m/CS fb/zuck` etc.
 * Parameters can be in any order e.g. if the command specifies `n/NAME p/PHONE_NUMBER`, `p/PHONE_NUMBER n/NAME` is also acceptable.
 ====
 
@@ -59,14 +60,14 @@ Format: `help`
 === Adding a person: `add`
 
 Adds a person to the address book +
-Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY [t/TAG]...`
+Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY [m/MAJOR]? [fb/FACEBOOK]? [r/REMARK]? [t/TAG]...`
 
 [TIP]
 A person can have any number of tags (including 0)
 
 Examples:
 
-* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/01/01/1990`
+* `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/01/01/1990 m/Chemical Engineering fb/zuck`
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 b/02/03/1990 t/criminal`
 
 === Listing all persons : `list`
@@ -77,7 +78,7 @@ Format: `list`
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
-Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAG]...`
+Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/BIRTHDAY] [m/MAJOR]? [fb/FACEBOOK]? [t/TAG]...`
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -135,6 +136,8 @@ Examples:
 Returns `john` and `John Doe`
 * `find t/cs2103` +
 Returns any person having tags `cs2103`
+* `find e/example.com` +
+Returns any person having email containing `example.com`
 
 === Searching all persons whose name starts with a certain alphabet: `listalp`
 
@@ -270,9 +273,9 @@ Deletes the 2nd person in the address book.
 `delete 1 3 7` +
 Deletes the 1st, 3rd, 7th person in the results of the `find` command.
 
-=== Favoriting a person : `favorite`
+=== (Un)Favoriting a person : `favorite`
 
-Favorites the specified person from the address book so they will appear on top of the contact list. +
+Favorites the specified person from the address book so they will appear on top of the contact list or unfavorite a favorited person. +
 Format: `favorite INDEX`
 
 ****
@@ -419,6 +422,10 @@ Format: `clear`
 Exits the program. +
 Format: `exit`
 
+=== Access the facebook profile of a contact
+
+If a person is registered with a facebook user-name, a facebook icon will appear beside his name. To view his facebook profile and feeds, simply click on the facebook icon. Note: you might have to log in due to facebook data security.
+
 === Saving the data
 
 Address book data are saved in the hard disk automatically after any command that changes the data. +
@@ -431,21 +438,21 @@ There is no need to save manually.
 
 == Command Summary
 
-* *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...` +
-e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend t/colleague`
+* *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY [r/REMARK]? [m/MAJOR]? [fb/FACEBOOK]? [t/TAG]...` +
+e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/01/01/1994 m/Computer Science fb/zuck t/friend t/colleague`
 * *Clear* : `clear`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
-* *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
+* *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [b/BIRTHDAY] [r/REMARK] [m/MAJOR] [fb/FACEBOOK] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Find* : `find KEYWORD [MORE_KEYWORDS]` +
-e.g. `find James Jake`
+e.g. `find James Jake`, `find e/example.com`
 * *List* : `list`
 * *Help* : `help`
 * *Select* : `select INDEX` +
 e.g.`select 2`
 * *History* : `history`
 * *Remark*: `remark INDEX [r/REMARK]`
-* *Undo* : `undo`
+* *Undo* : `undo` or `undo NUMBER_OF_TIME`
 * *Redo* : `redo`
 * *Favorite*: `favorite INDEX`
