--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -192,7 +192,16 @@ Selects the 1st person in the results of the `find` command.
 === Adding a Life Insurance: `addli`
 `since v1.4`
 
-Adds a life insurance in Lisa.
+Adds a life insurance in Lisa +
+
+Format: `add n/NAME o/OWNER i/INSURED b/BENEFICIARY pr/PREMIUM c/CONTRACT_FILE_PATH sd/SIGNING_DATE ed/EXPIRY_DATE`
+
+Examples:
+
+* `addli n/Term Life o/Alex Yeoh i/John Doe b/Mary Jane c/TermLife.pdf
+         pr/600 sd/01 11 2017 ed/01 11 2037`
+* `addli n/Whole Life o/Bernice Yu i/David Li b/Roy Balakrishnan c/WholeLife.pdf
+            pr/8500 sd/01 11 2017 ed/01 11 2117`
 
 === Listing entered commands : `history`
 
