--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -328,7 +328,7 @@ image::select-command-ui.png[width="790"]
 ==== Logging in to Facebook : `facebook`
 
 Shows the log in page for Facebook. +
-Format: `facebook` or 'fb'
+Format: `facebook` or `fb`
 
 ****
 * Allows person to log in to his Facebook Account using the Graphical Interface available.
@@ -403,7 +403,7 @@ The `redo` command fails as there are no `undo` commands executed previously.
 `clear` +
 `undo` (reverses the `clear` command) +
 `undo` (reverses the `delete 1` command) +
-`redomult` (reapplies the `delete 1` command and `clear` command) +
+`redomult 2` (reapplies the `delete 1` command and `clear` command) +
 // end::undoredo[]
 
 === Miscellaneous
@@ -433,6 +433,23 @@ That email already exists in UniCity. +
 UniCity prompts the user, `This person's email is already in use. Would you like to continue? YES or NO?`. +
 User will reply with `yes` in the command box to continue the operation. +
 Otherwise, he may choose to reply with `no`.
+
+==== Changing the window size : `ws`
+
+Changes the window size according to predefined sizes that the user can choose from.
+Format: `ws WINDOWSIZE`
+
+****
+* Changes the window size to the specified `WINDOWSIZE`.
+* The index *must be from the predefined choices* small, medium and big.
+****
+
+Examples:
+
+* `ws small` +
+Changes the window size to small.
+* `ws med` +
+Changes the window size to medium.
 
 ==== Exiting the program : `exit`
 
