--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -220,7 +220,7 @@ Deletes the 1st person in the results of the `find` command
 
 Adds tag to specified person(s) from the address book.
 
-Format: `t-add TAG INDEX`
+Format: `t-add INDEX TAG`
 
 ****
 * Adds tag to the person(s) at the specified `INDEX`.
@@ -235,6 +235,29 @@ Examples:
 `t-add 2 3 friends` +
 Adds the tag friends to the 2nd and 3rd person in the address book
 
+=== Setting a person(s) as "favourite" : `t-add` _[Since v1.3]_
+
+Adds favourite tag to specified person(s) from the address book.
+
+Format: `t-add INDEX... favourite`
+
+****
+* Sets person(s) at the specified `INDEX` as favourite.
+* The `favourite` can be used interchangeably with `fav`, and words containing `fav`.
+* The `favourite` tag is shown as a coral shaped circle in front of the tag list.
+* The index refers to the index number shown in the most recent listing, multiple indices are allowed.
+* The index *must be a positive integer* 1, 2, 3, ...
+****
+
+Examples:
+
+* `list` +
+`t-add 2 3 favourite` +
+Sets 2nd and 3rd person in the address book as favourite
+* `list` +
+`t-add 2 3 fav` +
+Sets 2nd and 3rd person in the address book as favourite
+
 === Removing a tag to a person(s) : `t-remove` _[Since v1.2]_
 
 Removes a tag from specified person(s) from the address book.
@@ -245,6 +268,7 @@ Format: `t-remove INDEX... TAG`
 * Removes a tag from the person(s) at the specified `INDEX`.
 * The index refers to the index number shown in the most recent listing, multiple indices are allowed.
 * The index *must be a positive integer* 1, 2, 3, ...
+* If no index is inputted, the provided [TAG] from all person(s) in the current list with the [TAG] will be removed.
 * The [TAG] *must not have its first word as number*.
 ****
 
@@ -252,7 +276,31 @@ Examples:
 
 * `list` +
 `t-remove 2 3 friends` +
-Removes the tag friends from the 2nd and 3rd person in the address book
+Removes the tag `friends` from the 2nd and 3rd person in the address book
+* `t-remove friends` +
+Removes the tag `friends` from all person(s) with the tag `friends` in the address book
+
+=== Removing a person(s) from favourite : `t-remove` _[Since v1.2]_
+
+Removes `favourite` tag from specified person(s) from the address book.
+
+Format: `t-remove INDEX... favourite`
+
+****
+*Removes person(s) at the specified `INDEX` from `favourite`.
+* The `favourite` can be used interchangeably with `fav`, and words containing `fav`.
+* If no index is inputted, the tag `fav` from all person(s) in the current list with `fav` will be removed.
+* The index *must be a positive integer* 1, 2, 3, ...
+****
+
+Examples:
+
+* `list` +
+`t-remove 2 3 fav` +
+Removes the tag favourite from the 2nd and 3rd person in the address book
+
+* `t-remove fav` +
+Removes the tag `fav` from all person(s) with the the tag `fav` in the address book
 
 === Find the person(s) with given tags: `t-find` _[Since v1.3]_
 
